# NorthstarLauncher

./: .gitignore  clang-cl-msvc.cmake  default.nix  flake.nix
.github/workflows/: ci.yml
primedev/: Northstar.cmake
primedev/core/convar/: concommand.h  convar.h
primedev/logging/: logging.cpp
primedev/origin/: origin.cpp
primedev/primelauncher/: CMakeLists.txt  main.cpp
primedev/wsockproxy/: loader.cpp  loader.h
